# UntisCalendarStreamer

./: .gitignore  Cargo.toml  README.md  alias
src/: definitions.rs  fetch.rs  homework.rs  hw_definitions.rs  lib.rs  main.rs
