[package]
name = "UntisSplitter"
version = "0.1.0"
edition = "2021"

[lib]
name = "untis_httpapi"

[dependencies]
untis = "0.3.0"
chrono = "0.4"
ics = "0.5.8"
hyper = { version = "1.4.1", features = ["full"] }
hyper-util = { version = "0.1.7", features = ["full"] }
tokio = { version = "1", features = ["full"] }
bytes = "1.7.1"
http-body-util = "0.1.2"
arcshift = "0.1.6"
uid = "0.1.7"
uuid = { version = "1.10.0", features = ["fast-rng", "v4"] }
hyper-rustls = "0.27.2"
cookie = "0.18.1"
reqwest = { version = "0.12", features = ["blocking"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
simplelog = "0.12.2"
log = "0.4.22"

[workspace.metadata.cross.target.aarch64-unknown-linux-gnu]
# Install libssl-dev:arm64, see <https://github.com/cross-rs/cross/blob/main/docs/custom_images.md#adding-dependencies-to-existing-images>
pre-build = [
  "dpkg --add-architecture $CROSS_DEB_ARCH",
  "apt-get update && apt-get --assume-yes install libssl-dev:$CROSS_DEB_ARCH",
]
